# reddit-trends

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
clients/example_client/: config.yml
clients/gardeninguk/: config.yml
clients/reddit/: config.yml
docs/: CHANGES.md  CONFIGS.md  DATASETS.md  DECISIONS.md  PLAN.md  PROJECT_BRIEF.md  PROJECT_SUMMARY.md  RUNBOOK.md  SECURITY_OVERVIEW.md  STATE.md  WORKFLOW.md
docs/agents/: analysis.md  infra.md  schema.md  security.md
scripts/: ORCHESTRATOR_PROMPT.md  anchor_l3_grouping.py  bootstrap.ps1  bootstrap.sh  compare_clusterings.py  compute_embeddings.py  dev_notes.md  embedding_benchmark.py  export_canonical.py  graph_clustering.py  keyword_extraction.py  keyword_growth.py  l3_clustering.py  label_hierarchy.py  name_clusters.py  run_clustering.py  stability_consensus.py  topic_refinement.py  tune_clustering.py  two_stage_clustering.py
src/client_portal/: projects.py
src/client_portal/analysis/: charts.py  label_review.py  metrics.py
src/client_portal/app/: label_review_app.py  label_review_views.py  project_manager_app.py  streamlit_app.py
src/client_portal/pipeline/: ingest.py  run.py  (+2 more)
tests/: test_anchor_l3_grouping.py  test_clustering_tools.py  test_compute_embeddings_stream.py  test_embedding_benchmark.py  test_export_canonical_chunked.py  test_keyword_extraction.py  test_keyword_growth.py  test_label_review.py  test_metrics_growth.py  test_name_clusters.py  test_projects.py  test_reddit_jsonl.py  test_smoke.py  test_stability_consensus.py  test_validation_metrics.py
(+1 files in other folders)
